<resources>
    <string name="app_name">云信直播竞答DEMO</string>

    <string name="net_unavailable">当前网络不可用</string>
    <string name="about">关于</string>
    
    <!-- 主界面 -->
    <string name="audience_client">[观众端]</string>
    <string name="room_id_input">输入房间号</string>
    <string name="room_id_tip">可在“主播端DEMO”中获取房间号</string>
    <string name="enter_room">进入房间</string>
    <string name="send">发送</string>
    <string name="revive_tip">复活: %d次</string>
    <string name="result_success">恭喜你冲关成功\n赢取奖金%.1f元</string>
    <string name="result_failed">很遗憾~冲关失败！</string>
    <string name="roomid_content">房间ID: %s</string>
    <string name="onlinecount_content">人数: %d</string>
    <string name="bonus_content">奖金: %.1f</string>
    <string name="no_body_success">无人冲关成功~</string>
    <string name="waiting_for_live">等待直播开始</string>
</resources>
