<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp"
        app:popupTheme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextAppearance="@style/Toolbar.TitleText" />
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@mipmap/ic_logo_image" />

    <TextView
        android:id="@+id/app_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/app_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/audience_client"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/room_id_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_client"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="35dp"
        android:hint="@string/room_id_input"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/color_gray_9298a3" />

    <TextView
        android:id="@+id/room_id_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/room_id_edit"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="5dp"
        android:text="@string/room_id_tip"
        android:textColor="@color/color_gray_9298a3"
        android:textSize="14sp" />

    <Button
        android:id="@+id/enter_room_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/room_id_tip"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/blue_btn_selector"
        android:text="@string/enter_room"
        android:textColor="@color/white"
        android:textSize="17sp" />

</RelativeLayout>
